--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,14 +49,17 @@ margin-top: 5%;
     font-family: Arial, sans-serif;
     font-weight: bold;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     text-align: center;
     cursor: pointer;
     transition: transform 0.2s;
   }
-
+  .button .texto{
+ flex-direction: column;
+ margin-left: 6%;
+  }
   .button:hover {
     transform: scale(1.05);
   }
