arrumando codigo do financeiro (HTML, CSS, JS), em processo de criação da função da da linha de detalhe da tela catalogo. Feito em conjunto com o Guilherme

--- a/public/css/catalogo.css
+++ b/public/css/catalogo.css
@@ -105,7 +105,28 @@ textarea:focus, input:focus, select:focus {
     width: 30px;
     height: 30px;
 }
-
+/*LINHA DETALHE*/
 #linhaDetalhe{
     display: table-row;
+}
+
+/*-----LINHA DETALHES DA TABELA------*/
+
+.containerLinhaOculta{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+.containerLinhaDetalhes{
+    width: 75vw;
+    height: 40vh;
+    background-color: #bcbdbe;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#imagemLinhaDetalhe{
+
 }
