--- a/public/css/financeiro.css
+++ b/public/css/financeiro.css
@@ -4,9 +4,75 @@
 body {
     margin: 0;
     font-family: Arial, sans-serif;
+    background-color: F0F0F0;
 }
 
+
+
+
+/******************************************/
+.navbar-caixa{
+
+width: 100%;
+height: 10vh;
+background-color: #FDFDFD;
+box-shadow: 1vh 0 3vh #a0a0a0;
+
+
+}
+
+.texto-nav{
+
+font-size: 5.9vh;
+display: flex;
+justify-content: center;
+align-items: center;
+padding: 1vh;
+padding-right: 84.5vh;
+color: #E99F00;
+}
+
+
+
+
+.menu-btn {
+    font-size: 20px;
+    cursor: pointer;
+    background-color: transparent;
+    color: rgb(0, 0, 0);
+    border: none;
+    border-radius: 5px;
+    font-size: 7vh;
+    display: flex;
+    padding-left: 5vh;
+    padding-bottom: vh;
+    
+    
+    
+}
+
+
+.conteudo-nav{
+
+display: flex;
+flex-direction: row-reverse;
+align-items: center;
+justify-content: space-between;
+
+}
+
+
+/* .menu-btn:hover {
+    background-color: #575757;
+} */
+
+
+
+/******************************************/
 /* Sidebar */
+
+
+
 .sidebar {
     height: 100%;
     width: 350px;
@@ -30,7 +96,7 @@ body {
 .sidebar h3 {
     margin-left: 1.5vw;
     margin-top: 30px;
-    font-size: larger;
+    font-size: large;
     font-weight: 100;
     color: #f1f1f1;
 }
@@ -44,7 +110,6 @@ body {
     display: flex;
     align-items: center;
     padding: 10px 20px;
-    font-size: 1.3em;
     font-weight: 680;
     cursor: pointer;
 }
@@ -78,7 +143,7 @@ body {
 }
 
 .sidebar ul li:hover div {
-    transform: scale(1.1); /* Efeito de zoom no ícone */
+    transform: scale(1.3); /* Efeito de zoom no ícone */
     transition: transform 0.3s ease;
 }
 
@@ -194,19 +259,8 @@ body {
     transition: margin-left 0.3s;
 }
 
-.menu-btn {
-    font-size: 20px;
-    cursor: pointer;
-    background-color: #333;
-    color: white;
-    border: none;
-    padding: 10px 15px;
-    border-radius: 5px;
-}
 
-.menu-btn:hover {
-    background-color: #575757;
-}
+
 
 
 /* Responsividade */
@@ -227,18 +281,26 @@ body {
 
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-#showFormButton {
-    padding: 10px 20px;
-    font-size: 16px;
-    background-color: #FFCC00;
+#caixa-recebimento {
+    padding: 2vh 6px;
+    font-size: 3.7vh;
+    background-color: #ffcc00;
     color: white;
-    border: none;
+    border: transparent;
     cursor: pointer;
     border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+
+    
+    
 }
 
-#showFormButton:hover {
-    background-color: #45a049;
+#caixa-recebimento:hover {
+    background-color: #d1a700;
+  
 }
 
 /* Estilos do formulário (inicialmente oculto) */
