--- a/public/css/telaInicial.css
+++ b/public/css/telaInicial.css
@@ -1,7 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
 *{
-   padding: 0;
-   margin: 0; 
+    margin: 0;
+    padding: 0;
+    font-family: 'inter';
 }
+
 body{
     background-color: #F0F0F0;
 }
@@ -102,4 +106,27 @@ margin-top: 5%;
     background-color: rgb(255, 255, 255);
     border: 1px solid #006fe7; 
     color: #006fe7; 
+}
+
+.navbar{
+
+width: 100%;
+height: 10vh;
+background-color: #FDFDFD;
+box-shadow: 1vh 0 3vh #a0a0a0;
+
+
+}
+section{
+  margin-top: -7vh;
+}
+#logo_senai{
+width: 10vw;
+margin-top: 1.2%;
+margin-left: 8vw;
+}
+#logoutButton{
+  width: 2vw;
+  margin-left: 90vw;
+margin-top: -5.5vh;
 }
