--- a/public/css/financeiro.css
+++ b/public/css/financeiro.css
@@ -12,7 +12,8 @@ body {
 
 /******************************************/
 .navbar-caixa{
-
+display: flex;
+text-align: center;
 width: 100%;
 height: 10vh;
 background-color: #FDFDFD;
@@ -25,10 +26,7 @@ box-shadow: 1vh 0 3vh #a0a0a0;
 
 font-size: 5.9vh;
 display: flex;
-justify-content: center;
-align-items: center;
-padding: 1vh;
-padding-right: 84.5vh;
+align-self: center;
 color: #E99F00;
 }
 
@@ -40,6 +38,7 @@ color: #E99F00;
     cursor: pointer;
     background-color: transparent;
     color: rgb(0, 0, 0);
+    margin-right: 47vh;
     border: none;
     border-radius: 5px;
     font-size: 7vh;
@@ -55,9 +54,10 @@ color: #E99F00;
 .conteudo-nav{
 
 display: flex;
+width: 100%;
 flex-direction: row-reverse;
-align-items: center;
-justify-content: space-between;
+justify-content: center;
+margin-right: 90vh;
 
 }
 
@@ -308,8 +308,7 @@ justify-content: space-between;
     display: none;
     justify-self: center;
     align-self: center;
-    margin-top: 20px;
-    padding: 20px;
+    padding-bottom: 20px;
     font-family: 'poppins', sans-serif;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -318,6 +317,11 @@ justify-content: space-between;
     justify-self: center;
     max-width: 450px;
     width: 100%;
+}
+
+#formContainer h2{
+    justify-self: center;
+    font-size: 4vh;
 }
 
 /* Estilos do campo de input */
@@ -349,7 +353,7 @@ input:focus {
 label {
     position: absolute;
     top: 50%;
-    left: 2.5vw;
+    left: 6.4vh;
     transform: translateY(-50%);
     font-family: 'poppins', sans-serif;
     font-size: 16px;
@@ -359,8 +363,8 @@ label {
 
 input:focus + label,
 input:not(:placeholder-shown) + label {
-    top: -10px;
-    font-size: 12px;
+    top: -.5vw;
+    font-size: 15px;
     color: #FFCC00;
     font-family: 'poppins', sans-serif;
 }
@@ -377,13 +381,24 @@ input::placeholder {
     text-align: center;
     background-color: #FFCC00;
     color: white;
-    padding: 10px 20px;
     border: none;
+    height: 5vh;
     cursor: pointer;
     border-radius: 5px;
-    width: 50%;
+    width: 40%;
+}
+
+#submitButton h3{
+    align-self: center;
+    justify-content: center;
+    margin-left: 5.7vh;
 }
 
 #submitButton:hover {
-    background-color: #45a049;
+    border-color:#FFCC00 ;
+    border-style: solid;
+    border-width: 0.2493vh;
+    color: #FFCC00;
+    background-color: white;
+    transition: 0.2s  ease;
 }
