--- a/public/css/financeiro.css
+++ b/public/css/financeiro.css
@@ -132,3 +132,45 @@ input::placeholder {
     background-color: white;
     transition: 0.2s  ease;
 }
+
+
+.container {
+    width: 80%;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+
+  h2 {
+    color: #333;
+  }
+
+  .checkbox-group {
+        display: flex;
+        justify-content: space-between;  /* Para distribuir os checkboxes igualmente */
+        margin-bottom: 20px;
+      }
+  
+
+  .checkbox-group label {
+    display: inline-block;
+    font-size: 16px;
+    color: #333;
+    cursor: pointer;
+    margin-right: 20px;
+    padding: 5px;
+  }
+
+  .section {
+    display: none;
+    padding: 15px;
+    margin-top: 10px;
+    background-color: #f9f9f9;
+    border-radius: 5px;
+  }
+
+  .section.active {
+    display: block;
+  }
