--- a/public/css/financeiro.css
+++ b/public/css/financeiro.css
@@ -6,25 +6,328 @@ body {
     font-family: Arial, sans-serif;
     background-color: F0F0F0;
 }
+/******************************************/
+.navbar-caixa {
+
+    width: 100%;
+    height: 10vh;
+    background-color: #FDFDFD;
+    box-shadow: 1vh 0 3vh #a0a0a0;
 
 
+}
+
+/* INSERIR NO SEU CSS "color:" */
+.texto-nav {
+    font-size: 4.5vh;
+    display: flex;
+    justify-self: center;
+    align-self: center;
+    padding: 1vh;
+    color: #FFCC00;
+    padding-right: 41.5vw;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
+}
+
+
+
+
+.menu-btn {
+    font-size: 20px;
+    cursor: pointer;
+    background-color: transparent;
+    color: rgb(0, 0, 0);
+    border: none;
+    border-radius: 5px;
+    font-size: 7vh;
+    display: flex;
+    padding-left: 5vh;
+    padding-bottom: vh;
+
+
+
+}
+
+
+.conteudo-nav {
+
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: space-between;
+
+}
+
+/******************************************/
+/* Sidebar */
+
+
+
+.sidebar {
+    height: 100%;
+    width: 350px;
+    position: fixed;
+    top: 0;
+    left: -350px;
+    /* Escondido por padrão */
+    background-color: #0f0f0f;
+    color: white;
+    overflow-x: hidden;
+    transition: 0.3s;
+    padding-top: 20px;
+    font-size: 2vh;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
+}
+
+.sidebar img {
+    align-self: center;
+    padding-left: 4vw;
+    padding-top: 1vw;
+    color: #f1f1f1;
+}
+
+.sidebar h3 {
+    margin-left: 1.5vw;
+    margin-top: 30px;
+    font-size: 1vw;
+    color: #f1f1f1;
+    padding: 10px 0;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
+}
+
+.sidebar ul {
+    list-style: none;
+    padding: 0;
+}
+
+.sidebar ul li {
+    display: flex;
+    align-items: center;
+    padding: 18px 50px;
+    font-weight: 300;
+    cursor: pointer;
+    font-size: 1.4vw;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
+}
+
+.sidebar ul li a {
+    color: #f1f1f1;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.sidebar ul li a div {
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.sidebar ul li a span {
+    margin-left: 20px;
+    /* Distância entre ícone e texto */
+}
+
+.sidebar ul li:hover,
+.sidebar ul li a:hover {
+    background-color: #000;
+    border-radius: 5px;
+    color: inherit;
+}
+
+.sidebar ul li:hover div {
+    transform: scale(1.3);
+    /* Efeito de zoom no ícone */
+    transition: transform 0.3s ease;
+}
+
+.sidebar h4 {
+    display: flex;
+    justify-self: center;
+    align-self: baseline;
+    margin-top: 260px;
+    font-size: 0.75em;
+    font-weight: 300;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
+}
+
+.container-logos #logo-gato{
+    align-items: center;
+    width: 40%;
+}
+
+.container-logos #logo-cubo{
+    width: 32%;
+}
+
+/* Estilos específicos de hover */
+.sidebar ul li #home:hover {
+    color: #E65332;
+    font-weight: 300;
+
+    & .home {
+        display: inline-block;
+        width: 1.3em;
+        height: 1.3em;
+        background-repeat: no-repeat;
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cg fill='none' stroke='%23e65332' stroke-linecap='round' stroke-linejoin='round' stroke-width='2'%3E%3Cpath d='M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8'/%3E%3Cpath d='M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z'/%3E%3C/g%3E%3C/svg%3E");
+    }
+}
+
+.sidebar ul li #cadas:hover {
+    color: #50CD58;
+    font-weight: 300;
+
+    & .box-of-good-good {
+        display: inline-block;
+        width: 1.3em;
+        height: 1.3em;
+        background-repeat: no-repeat;
+        background-size: 100% 100%;
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%2350cd58' d='m17.578 4.432l-2-1.05C13.822 2.461 12.944 2 12 2s-1.822.46-3.578 1.382l-.321.169l8.923 5.099l4.016-2.01c-.646-.732-1.688-1.279-3.462-2.21m4.17 3.534l-3.998 2V13a.75.75 0 0 1-1.5 0v-2.286l-3.5 1.75v9.44c.718-.179 1.535-.607 2.828-1.286l2-1.05c2.151-1.129 3.227-1.693 3.825-2.708c.597-1.014.597-2.277.597-4.8v-.117c0-1.893 0-3.076-.252-3.978M11.25 21.904v-9.44l-8.998-4.5C2 8.866 2 10.05 2 11.941v.117c0 2.525 0 3.788.597 4.802c.598 1.015 1.674 1.58 3.825 2.709l2 1.049c1.293.679 2.11 1.107 2.828 1.286M2.96 6.641l9.04 4.52l3.411-1.705l-8.886-5.078l-.103.054c-1.773.93-2.816 1.477-3.462 2.21'/%3E%3C/svg%3E");
+    }
+}
+
+
+.sidebar ul li #edicao:hover {
+    color: #DA0000;
+    font-weight: 300;
+
+    & .pencil {
+        display: inline-block;
+        width: 1.3em;
+        height: 1.3em;
+        --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cg fill='none' stroke='%23000' stroke-width='2'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M4.333 16.048L16.57 3.81a2.56 2.56 0 0 1 3.62 3.619L7.951 19.667a2 2 0 0 1-1.022.547L3 21l.786-3.93a2 2 0 0 1 .547-1.022'/%3E%3Cpath d='m14.5 6.5l3 3'/%3E%3C/g%3E%3C/svg%3E");
+        background-color: currentColor;
+        -webkit-mask-image: var(--svg);
+        mask-image: var(--svg);
+        -webkit-mask-repeat: no-repeat;
+        mask-repeat: no-repeat;
+        -webkit-mask-size: 100% 100%;
+        mask-size: 100% 100%;
+
+    }
+
+}
+
+.sidebar ul li #esto:hover {
+    color: #319DF6;
+    font-weight: 300;
+
+    & .boxes-of-good-good {
+        display: inline-block;
+        width: 1.3em;
+        height: 1.3em;
+        background-repeat: no-repeat;
+        background-size: 100% 100%;
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Cpath fill='%23319df6' d='M10 4v11h12V4zm2 2h2v4l2-2l2 2V6h2v7h-8zM3 17v11h12V17zm14 0v11h12V17zM5 19h2v4l2-2l2 2v-4h2v7H5zm14 0h2v4l2-2l2 2v-4h2v7h-8z'/%3E%3C/svg%3E");
+    }
+}
+
+.sidebar ul li #finan:hover {
+    color: #FFCC00;
+    font-weight: 300;
+
+    & .financial {
+        display: inline-block;
+        width: 1.3em;
+        height: 1.3em;
+        background-repeat: no-repeat;
+        background-size: 100% 100%;
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2048 2048'%3E%3Cpath fill='%23ffcc00' d='m0 1898l384-384v534H0zm512-512l384-384v1046H512zm1280-490h128v1152h-384v-918zm-448 426l64-64v790h-384V1002zm704-1066v512h-128V475l-576 575l-384-384L0 1627v-182l960-959l384 384l485-486h-293V256z'/%3E%3C/svg%3E");
+    }
+}
+
+.container-img{
+    display: flex;
+    gap: 1px;
+    flex-direction: row;
+    width: 100%;
+}
+
+.container-img img{
+    display: flex;
+    gap: 1px;
+    justify-self: center;
+    width: 10vh;
+    height: 10vh;
+}
+
+/* Close Button */
+.close-btn {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    font-size: 25px;
+    background: none;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+/* Content */
+.content {
+    margin-left: 0;
+    padding: 20px;
+    transition: margin-left 0.3s;
+}
+
+
+
+
+
+/* Responsividade */
+@media (max-width: 768px) {
+    .sidebar {
+        width: 250px;
+    }
+
+    .sidebar ul li a {
+        font-size: 1em;
+    }
+
+    .menu-btn {
+        padding: 8px 10px;
+        font-size: 18px;
+    }
+}
+
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 #caixa-recebimento {
-    padding: 2vh 6px;
-    font-size: 3.7vh;
+    padding: 2vh 3vh;
+    font-size: 3vh;
+    font-weight: 500;
     background-color: #ffcc00;
     color: white;
     border: transparent;
     cursor: pointer;
     border-radius: 5px;
     display: flex;
+    margin-right:4vh ;
+    margin-top: 60vh;
     justify-content: center;
-    margin-top: 38%;
-    margin-left: 85%;
-
-    
-    
+    justify-self: right;
 }
 
 #caixa-recebimento:hover {
@@ -37,6 +340,8 @@ body {
     display: none;
     justify-self: center;
     align-self: center;
+    z-index: 999;
+    position: relative;
     padding-bottom: 20px;
     font-family: 'poppins', sans-serif;
     border: 1px solid #ccc;
@@ -46,18 +351,21 @@ body {
     justify-self: center;
     max-width: 450px;
     width: 100%;
-    margin-top: -38%;
+    margin-top: -80vh;
+    z-index: 1;
 }
 
 #formContainer h2{
     justify-self: center;
     font-size: 4vh;
+    z-index: 999;
 }
 
 /* Estilos do campo de input */
 .input-container {
     position: relative;
     margin-bottom: 20px;
+    z-index: 999;
 }
 
 input {
@@ -73,10 +381,12 @@ input {
     border-radius: 5px;
     background-color: #fff;
     outline: none;
+    z-index: 999;
 }
 
 input:focus {
     border-color: #FFCC00;
+    z-index: 999;
 }
 
 /* Estilos das labels */
@@ -89,18 +399,21 @@ label {
     font-size: 16px;
     color: #999;
     transition: all 0.3s ease;
+    z-index: 999;
 }
 
 input:focus + label,
 input:not(:placeholder-shown) + label {
-    top: -.5vw;
+    top: -1vh;
     font-size: 15px;
     color: #FFCC00;
     font-family: 'poppins', sans-serif;
+    z-index: 999;
 }
 
 input::placeholder {
     visibility: hidden;
+    z-index: 999;
 }
 
 /* Estilo do botão de envio */
@@ -116,12 +429,14 @@ input::placeholder {
     cursor: pointer;
     border-radius: 5px;
     width: 40%;
+    z-index: 999;
 }
 
 #submitButton h3{
     align-self: center;
     justify-content: center;
     margin-left: 5.7vh;
+    z-index: 999;
 }
 
 #submitButton:hover {
@@ -131,46 +446,243 @@ input::placeholder {
     color: #FFCC00;
     background-color: white;
     transition: 0.2s  ease;
+    z-index: 999;
 }
 
 
 .container {
-    width: 80%;
+    display: flex;
+    align-content: center;
+    justify-content: space-between;
+    width: 80vh;
+    height: auto;
     margin: 0 auto;
     padding: 20px;
-    background-color: #fff;
     border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+  #btn-recebim{
+    text-decoration: none;
+    width: 19vh;
+    height: 9vh;
+    border-radius:1.2vh ;
+    border: #FFCC00;
+    font-size: 2.5vh;
+    font-weight: 600;
+    color: white;
+    background-color: #FFCC00;
   }
 
-  h2 {
-    color: #333;
+
+  #btn-saida{
+    text-decoration: none;
+    width: 19vh;
+    height: 9vh;
+    border-radius:1.2vh ;
+    border: #FFCC00;
+    font-size: 2.5vh;
+    font-weight: 600;
+    color: white;
+    background-color: #FFCC00;
   }
 
-  .checkbox-group {
-        display: flex;
-        justify-content: space-between;  /* Para distribuir os checkboxes igualmente */
-        margin-bottom: 20px;
-      }
-  
+  #btn-saldo{
+    text-decoration: none;
+    width: 19vh;
+    height: 9vh;
+    border-radius:1.2vh ;
+    border: #FFCC00;
+    font-size: 2.5vh;
+    font-weight: 600;
+    color: white;
+    background-color: #FFCC00;
+  }
 
-  .checkbox-group label {
-    display: inline-block;
-    font-size: 16px;
-    color: #333;
+  #btn-saida:hover, #btn-saldo:hover{
+    border-style: solid;
+    border-color: #FFCC00;
+    border-width: 0.27vw;
+    background-color: white;
+    color: #FFCC00;
     cursor: pointer;
-    margin-right: 20px;
-    padding: 5px;
   }
 
-  .section {
+
+
+  #toggle-filter {
+    position:static;
+    display: flex;
+    padding: 10px 20px;
+    font-size: 16px;
+    font-weight: 520;
+    height: auto;
+    background-color: white;
+    color: #FFCC00;
+    margin-top: -65.7vh;
+    margin-left: 12vw;
+    border: solid;
+    border-width: 0.287vh;
+    border-color: #FFCC00;
+    border-radius: 0.5vh;
+    cursor: pointer;
+}
+
+#toggle-filter:hover {
+    background-color: #f1f1f1;
+}
+
+.filter-overlay {
     display: none;
-    padding: 15px;
-    margin-top: 10px;
-    background-color: #f9f9f9;
+    position: absolute;
+    top: 31vh;
+    left: 19vw;
+    transform: translateX(-50%);
+    width: 90%;
+    max-width: 20vw;
+    background: white;
+    border: 1px solid #ddd;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    z-index: 1000;
     border-radius: 5px;
-  }
+}
 
-  .section.active {
+.filter-section {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.filter-section label{
     display: block;
-  }
+    font-weight: bold;
+    margin-bottom: 5px;
+
+}
+
+.filter-section input, .filter-section select, .filter-section button {
+    padding: 8px;
+    font-size: 16px;
+}
+
+.filter-section button {
+    background-color: #28a745;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+.filter-section button:hover {
+    background-color: #218838;
+}
+
+.products-list {
+    margin-top: 20px;
+    background: white;
+    padding: 10px;
+    border: 1px solid #ddd;
+}
+
+.product-item {
+    border-bottom: 1px solid #ddd;
+    padding: 10px;
+}
+
+
+
+/* ------------------------Recebimentos------------------- */
+#tabela-recebimentos{
+    width: 81.51vw;
+}
+
+.table-container {
+    width: 100%;
+    max-width: 800px;
+    margin-top: auto;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    overflow: hidden;
+    background-color: white;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 20px;
+    border-bottom: 1px solid #f0f0f0;
+    cursor: pointer;
+    background-color: #f5f5f5;
+}
+
+.row:hover {
+    background-color: #f5f5f5;
+}
+
+.cell {
+    display:flex;
+    flex-direction: column;
+    text-align: left;
+    color: black;
+}
+
+.cell span {
+    display: block;
+    margin-top: 5px;
+    color: #888;
+}
+
+.cell .green {
+    color: #28a745;
+    font-weight: bold;
+}
+
+.details-row {
+    display: none;
+    flex-direction: row;
+    padding: 15px 20px;
+    background-color: #fff7e6;
+    border-top: 3px solid #ffcc00;
+}
+
+.details-left {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-right: 1px dashed #ffcc00;
+    padding-right: 20px;
+}
+
+.details-left .image-placeholder {
+    width: 100px;
+    height: 100px;
+    border: 2px dashed #ffcc00;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.details-left .image-placeholder img {
+    width: 50px;
+    height: 50px;
+}
+
+.details-right {
+    flex: 2;
+    padding-left: 20px;
+}
+
+.detail-item {
+    margin-bottom: 10px;
+    font-size: 14px;
+}
+
+.detail-item strong {
+    display: block;
+    color: black;
+}
+
+.detail-item span {
+    color: #888;
+}
