--- a/public/css/financeiro.css
+++ b/public/css/financeiro.css
@@ -315,24 +315,42 @@ body {
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 #caixa-recebimento {
+    height: 9vh;
     padding: 2vh 3vh;
     font-size: 3vh;
     font-weight: 500;
-    background-color: #ffcc00;
-    color: white;
-    border: transparent;
+    background-color: White;
+    color: #FFCC00;
+    border: solid 0.4vh #FFCC00;
     cursor: pointer;
-    border-radius: 5px;
+    border-radius: 1vh;
     display: flex;
     margin-right:4vh ;
     margin-top: 60vh;
+    align-content: center;
     justify-content: center;
     justify-self: right;
 }
 
+
+#caixa-recebimento .circle{
+    border-radius: 50%;
+    width: 5vh;
+    height: 5vh;
+    margin-right: 1vh;
+    background-color: #FFCC00;
+    color: white;
+    font-size: 4.5vh;
+}
+
 #caixa-recebimento:hover {
-    background-color: #d1a700;
-  
+    background-color: #FFCC00;
+    color: white;  
+    
+    &.circle{
+        background-color: white;
+        color: #FFCC00; 
+    }
 }
 
 /* Estilos do formulário (inicialmente oculto) */
@@ -587,17 +605,41 @@ input::placeholder {
     padding: 10px;
 }
 
-
+/* -----linha tela */
+.header {
+    position: relative;
+    display: flex;
+    margin-top: 2vh;
+    margin-bottom:1.5vh ;
+    justify-self: center;
+    align-items: center;
+    width: 100%;
+    max-width: 800px;
+  }
+  
+  .title {
+    white-space: nowrap;
+    margin-right: 1vh;
+    font-size: larger;
+  }
+  
+  .divider {
+    flex-grow: 2;
+    border-top: 0.7vh dashed #000;
+    width: 300vh;
+  }
 
 /* ------------------------Recebimentos------------------- */
 .tabela-recebimentos{
     display: flex;
+    width: auto;
     justify-content: center;
     align-items: center;
 }
 
 
 .table-container {
+    width: 55%;
     margin-top: auto;
     border: 1px solid #ddd;
     border-radius: 8px;
@@ -613,7 +655,7 @@ input::placeholder {
     padding: 0.7vh;
     gap: 2vh;
 }
-/* 
+
 .row {
     display: flex;
     justify-content: space-between;
@@ -631,6 +673,7 @@ input::placeholder {
 .cell {
     display:flex;
     flex-direction: column;
+   column-gap: 2vh;
     text-align: left;
     color: black;
 }
@@ -687,4 +730,4 @@ input::placeholder {
 
 .detail-item span {
     color: #888;
-} */
+}
