--- a/public/css/cadastro1.css
+++ b/public/css/cadastro1.css
@@ -3,9 +3,7 @@
     padding: 0;
     box-sizing: border-box;
 
-        {
-        font-family: "Inter", serif;
-    }
+    font-family: "Inter", serif;
 }
 
 body {
@@ -14,8 +12,21 @@ body {
 }
 
 /* CABEÇALHO */
-.texto-nav{
+.texto-nav {
     color: #0B6300;
+}
+
+.sidebar ul li #cadas {
+    color: #50CD58;
+
+    & .box-of-good-good {
+        display: inline-block;
+        width: 1.3em;
+        height: 1.3em;
+        background-repeat: no-repeat;
+        background-size: 100% 100%;
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%2350cd58' d='m17.578 4.432l-2-1.05C13.822 2.461 12.944 2 12 2s-1.822.46-3.578 1.382l-.321.169l8.923 5.099l4.016-2.01c-.646-.732-1.688-1.279-3.462-2.21m4.17 3.534l-3.998 2V13a.75.75 0 0 1-1.5 0v-2.286l-3.5 1.75v9.44c.718-.179 1.535-.607 2.828-1.286l2-1.05c2.151-1.129 3.227-1.693 3.825-2.708c.597-1.014.597-2.277.597-4.8v-.117c0-1.893 0-3.076-.252-3.978M11.25 21.904v-9.44l-8.998-4.5C2 8.866 2 10.05 2 11.941v.117c0 2.525 0 3.788.597 4.802c.598 1.015 1.674 1.58 3.825 2.709l2 1.049c1.293.679 2.11 1.107 2.828 1.286M2.96 6.641l9.04 4.52l3.411-1.705l-8.886-5.078l-.103.054c-1.773.93-2.816 1.477-3.462 2.21'/%3E%3C/svg%3E");
+    }
 }
 
 /* CADASTRO */
@@ -136,7 +147,7 @@ section.cadastro .flex .parte-bolinhas .container {
     margin: 2% 14%;
 }
 
-.caixa-aberta img{
+.caixa-aberta img {
     height: auto;
     width: 100%;
 }
@@ -189,8 +200,8 @@ section.cadastro .flex .parte-bolinhas .container {
     padding: 2% 6%;
 }
 
-.inserir-info .container .caixaTexto{
-    margin-bottom: 2%; 
+.inserir-info .container .caixaTexto {
+    margin-bottom: 2%;
     padding: 0 6%;
 }
 
@@ -208,7 +219,7 @@ section.cadastro .flex .parte-bolinhas .container {
     box-shadow: 0.4vh 0.4vh 0.4vh #c4c4c4;
 }
 
-#codigo{
+#codigo {
     width: 50%;
     padding: 2.3%;
     border: 0.1vh solid #ccc;
@@ -220,17 +231,17 @@ section.cadastro .flex .parte-bolinhas .container {
 }
 
 .inserir-info .container textarea {
-    min-height: 12vh; 
-    resize: vertical; 
+    min-height: 12vh;
+    resize: vertical;
 }
 
-.setas{
+.setas {
     display: flex;
     justify-content: center;
     margin-top: -14vh;
 }
 
-.inserir-info .container button img{
+.inserir-info .container button img {
     height: auto;
     width: 15vh;
 }
@@ -240,17 +251,17 @@ section.cadastro .flex .parte-bolinhas .container {
     border: none;
 }
 
-.inserir-info .setas button:hover{
+.inserir-info .setas button:hover {
     transform: scale(1.05);
 }
 
-.footer{
+.footer {
     display: flex;
     justify-content: center;
     margin-top: -20px;
 }
 
-.footer img{
+.footer img {
     height: auto;
     width: 35vh;
 }
