--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -66,7 +66,9 @@
     overflow-x: hidden;
     transition: 0.3s;
     padding-top: 20px;
-    font-family: "Inter", serif
+    font-family: "Inter", serif;
+
+    z-index: 2;
 }
 
 .sidebar img {
