--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -16,8 +16,8 @@
     justify-content: center;
     align-items: center;
     padding: 1vh;
-    padding-right: 84.5vh;
     font-family: "Inter", serif;
+    width: 100%;
 }
 
 
